[gd_scene load_steps=11 format=2]

[ext_resource path="res://EspantaSilbon.gd" type="Script" id=1]
[ext_resource path="res://gfx/enemies/silbon.png" type="Texture" id=2]
[ext_resource path="res://gfx/objects/perro1.png" type="Texture" id=3]
[ext_resource path="res://sfx/ladrido2.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/bgm/vallenato.ogg" type="AudioStream" id=5]
[ext_resource path="res://sfx/silbidosubiendo2.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/silbidobajando.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 354.713, 462.571 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 246.447, 185.324 )

[sub_resource type="Animation" id=3]
resource_name = "ShakeDog"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Dog:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, -3.0 ]
}

[node name="EspantaSilbon" type="Node2D"]
light_mask = 2
script = ExtResource( 1 )

[node name="Silbon" type="KinematicBody2D" parent="."]
light_mask = 2
position = Vector2( 1754.5, 529.852 )

[node name="silbon" type="Sprite" parent="Silbon"]
light_mask = 2
position = Vector2( 5.49268, 13.0922 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Silbon"]
light_mask = 2
shape = SubResource( 1 )

[node name="Dog" type="StaticBody2D" parent="."]
light_mask = 2
position = Vector2( 296.072, 540.087 )

[node name="perro" type="Sprite" parent="Dog"]
light_mask = 2
position = Vector2( 49.3439, 3.09735 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dog"]
light_mask = 2
position = Vector2( 46.7524, -1.94788 )
shape = SubResource( 2 )

[node name="Ladrido" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="WinSilbon" type="Timer" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Silbido" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SilbidoDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShakeDog = SubResource( 3 )
[connection signal="timeout" from="WinSilbon" to="." method="_on_WinSilbon_timeout"]
[connection signal="finished" from="SilbidoDown" to="." method="_on_SilbidoDown_finished"]
